--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
 		"@types/compression": "^1.7.1",
 		"@types/express": "^4.17.13",
 		"@types/node": "^16.3.0",
+		"@types/node-fetch": "^2.5.11",
 		"eslint": "^7.30.0",
 		"prettier": "^2.3.2",
 		"typescript": "^4.3.5"
 	},
 	"dependencies": {
+		"@sapphire/fetch": "^1.0.5",
 		"@types/ioredis": "^4.26.5",
 		"compression": "^1.7.4",
 		"express": "^4.17.1",
